Added v1.24  for esp32 combined image
1. Added v1.24  for esp32 combined image
2. Resolved wrong comment generation issue

--- a/blockcoding/bipes-ILS/BIPES/ui/flash/static/firmware_build/manifest.json
+++ b/blockcoding/bipes-ILS/BIPES/ui/flash/static/firmware_build/manifest.json
@@ -8,16 +8,7 @@
       "chipFamily": "ESP32",
       "parts": [                              
         {
-          "path": "ESP32_GENERIC-20251015-v1.23.0_bootloader.bin",
-          "offset": 4096                      
-        },
-        {
-          "path": "ESP32_GENERIC-20251015-v1.23.0_partition-table.bin",
-          "offset": 32768                     
-        },
-        {
-          "path": "ESP32_GENERIC-20251015-v1.23.0_micropython.bin",
-          "offset": 65536                     
+          "path": "ESP32_GENERIC-20251015-v1.24.0.bin",
         }
       ]
     },
